--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --import tsx ./node_modules/knex/bin/cli.js",
-    "lint": "eslint src --ext .ts --fix"
+    "lint": "eslint src --ext .ts --fix",
+    "build": "tsup src"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^22.7.5",
     "eslint": "^8.57.1",
+    "tsup": "^8.3.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   },
