--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "- [] Deve ser possível criar um usuário\r - [] Deve ser possível identificar o usuário entre as requisições\r - [] Deve ser possível registrar uma refeição feita, com as seguintes informações:\r   > _As refeições devem ser relacionadas a um usuário._\r   - Nome\r   - Descrição\r   - Data e Hora\r   - Está dentro ou não da dieta\r - [] Deve ser possível listar todas as refeições de um usuário\r - [] Deve ser possível visualizar uma única refeição\r - [] Deve ser possível editar uma refeição, podendo alterar todos os dados acima\r - [] Deve ser possível apagar uma refeição\r - [] Deve ser possível recuperar as métricas de um usuário\r   - [] Quantidade total de refeições registradas\r   - [] Quantidade total de refeições dentro da dieta\r   - [] Quantidade total de refeições fora da dieta\r   - [] Melhor sequência de refeições dentro da dieta\r - [] O usuário só pode visualizar, editar e apagar as refeições o qual ele criou",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --import tsx ./node_modules/knex/bin/cli.js",
@@ -18,12 +21,13 @@
     "eslint": "^8.57.1",
     "tsup": "^8.3.0",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "sqlite3": "^5.1.7"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
+    "pg": "^8.13.0",
     "zod": "^3.23.8"
   }
 }
