--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^22.7.5",
     "eslint": "^8.57.1",
+    "sqlite3": "^5.1.7",
     "tsup": "^8.3.0",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3",
-    "sqlite3": "^5.1.7"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "fastify": "^5.0.0",
     "knex": "^3.1.0",
     "pg": "^8.13.0",
     "zod": "^3.23.8"
